[gd_scene load_steps=4 format=1]

[ext_resource path="res://themes/Default.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/CharacterSelectScreen.gd" type="Script" id=2]
[ext_resource path="res://themes/images/default/backdrop2.png" type="Texture" id=3]



[node name="CharacterSelectScreen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 984.0
margin/bottom = 560.0
script/script = ExtResource( 2 )

[node name="TextureFrame" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -984.0
margin/bottom = -560.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="CharNameLabel" type="Label" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 250.0
margin/top = 40.0
margin/right = -730.0
margin/bottom = 68.0
text = "MyCharacter"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PreviousButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 40.0
margin/right = 240.0
margin/bottom = 71.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<"
flat = false

[node name="NextButton" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -740.0
margin/top = 40.0
margin/right = -920.0
margin/bottom = 71.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ">"
flat = false

[node name="BackButton" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = -490.0
margin/right = 240.0
margin/bottom = -521.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="EditButton" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 420.0
margin/top = 530.0
margin/right = 600.0
margin/bottom = 561.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Edit"
flat = false

[node name="SelectButton" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -740.0
margin/top = -490.0
margin/right = -920.0
margin/bottom = -521.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SELECT"
flat = false

[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]

[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]


